src/objects/RelatedCaseFieldMapping__c.object
<CustomObject>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTechnical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTechnical?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNonTechnical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNonTechnical?</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Related Case Field Mapping</label>
</CustomObject>